@@ -7,9 +7,12 @@ import liquibase.resource.ResourceAccessor;
 import liquibase.util.ISODateFormat;
 import liquibase.util.ObjectUtil;
 
-import java.lang.reflect.*;
+import java.lang.reflect.Modifier;
+import java.lang.reflect.ParameterizedType;
+import java.lang.reflect.Type;
 import java.util.*;
-import java.util.regex.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public abstract class AbstractLiquibaseSerializable implements LiquibaseSerializable {
 
@@ -32,12 +35,11 @@ public abstract class AbstractLiquibaseSerializable implements LiquibaseSerializ
                             } else if (dataTypeClassParameters[0] instanceof ParameterizedType) {
                                 collectionType = (Class) ((ParameterizedType) dataTypeClassParameters[0]).getRawType();
                             }
-                            if (collectionType != null
-                                    && LiquibaseSerializable.class.isAssignableFrom(collectionType)
-                                    && !collectionType.isInterface()
-                                    && !Modifier.isAbstract(collectionType.getModifiers())) {
+                            if ((collectionType != null) && LiquibaseSerializable.class.isAssignableFrom
+                                (collectionType) && !collectionType.isInterface() && !Modifier.isAbstract
+                                (collectionType.getModifiers())) {
 
-                                String elementName = ((LiquibaseSerializable) collectionType.newInstance()).getSerializedObjectName();
+                                String elementName = ((LiquibaseSerializable) collectionType.getConstructor().newInstance()).getSerializedObjectName();
                                 List<ParsedNode> elementNodes = Collections.emptyList();
                                 if (childNode.getName().equals(elementName)) {
                                     elementNodes = Collections.singletonList(childNode);
@@ -47,7 +49,7 @@ public abstract class AbstractLiquibaseSerializable implements LiquibaseSerializ
                                 if (!elementNodes.isEmpty()) {
                                     Collection collection = ((Collection) getSerializableFieldValue(childNode.getName()));
                                     for (ParsedNode node : elementNodes) {
-                                        LiquibaseSerializable childObject = (LiquibaseSerializable) collectionType.newInstance();
+                                        LiquibaseSerializable childObject = (LiquibaseSerializable) collectionType.getConstructor().newInstance();
                                         childObject.load(node, resourceAccessor);
                                         collection.add(childObject);
                                     }
@@ -58,7 +60,7 @@ public abstract class AbstractLiquibaseSerializable implements LiquibaseSerializ
                         if (!dataTypeClass.isInterface()
                                 && !Modifier.isAbstract(dataTypeClass.getModifiers())) {
 
-                            LiquibaseSerializable childObject = (LiquibaseSerializable) dataTypeClass.newInstance();
+                            LiquibaseSerializable childObject = (LiquibaseSerializable) dataTypeClass.getConstructor().newInstance();
                             childObject.load(childNode, resourceAccessor);
                             setSerializableFieldValue(childNode.getName(), childObject);
                         }
@@ -77,12 +79,11 @@ public abstract class AbstractLiquibaseSerializable implements LiquibaseSerializ
                                 } else if (dataTypeClassParameters[0] instanceof ParameterizedType) {
                                     collectionType = (Class) ((ParameterizedType) dataTypeClassParameters[0]).getRawType();
                                 }
-                                if (collectionType != null
-                                        && LiquibaseSerializable.class.isAssignableFrom(collectionType)
-                                        && !collectionType.isInterface()
-                                        && !Modifier.isAbstract(collectionType.getModifiers())) {
+                                if ((collectionType != null) && LiquibaseSerializable.class.isAssignableFrom
+                                    (collectionType) && !collectionType.isInterface() && !Modifier.isAbstract
+                                    (collectionType.getModifiers())) {
 
-                                    String elementName = ((LiquibaseSerializable) collectionType.newInstance()).getSerializedObjectName();
+                                    String elementName = ((LiquibaseSerializable) collectionType.getConstructor().newInstance()).getSerializedObjectName();
                                     List<ParsedNode> elementNodes = Collections.emptyList();
                                     if (childNode.getName().equals(elementName)) {
                                         elementNodes = Collections.singletonList(childNode);
@@ -92,7 +93,7 @@ public abstract class AbstractLiquibaseSerializable implements LiquibaseSerializ
                                     if (!elementNodes.isEmpty()) {
                                         Collection collection = ((Collection) getSerializableFieldValue(field));
                                         for (ParsedNode node : elementNodes) {
-                                            LiquibaseSerializable childObject = (LiquibaseSerializable) collectionType.newInstance();
+                                            LiquibaseSerializable childObject = (LiquibaseSerializable) collectionType.getConstructor().newInstance();
                                             childObject.load(node, resourceAccessor);
                                             collection.add(childObject);
                                         }
@@ -168,7 +169,7 @@ public abstract class AbstractLiquibaseSerializable implements LiquibaseSerializ
             SerializationType type = getSerializableFieldType(field);
             if (type == SerializationType.DIRECT_VALUE) {
                 node.setValue(fieldValue);
-            } else if (type == SerializationType.NAMED_FIELD || type == SerializationType.NESTED_OBJECT) {
+            } else if ((type == SerializationType.NAMED_FIELD) || (type == SerializationType.NESTED_OBJECT)) {
                 if (fieldValue instanceof ParsedNode) {
                     node.addChild((ParsedNode) fieldValue);
                 } else {
@@ -217,7 +218,7 @@ public abstract class AbstractLiquibaseSerializable implements LiquibaseSerializ
                     returnList.add(objValue);
                 }
             }
-            if (((Collection) value).size() == 0) {
+            if (((Collection) value).isEmpty()) {
                 return null;
             } else {
                 return returnList;
